--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ts-node": "^10.9.2",
     "@types/hapi__cookie": "^12.0.5",
     "@types/hapi__inert": "^5.2.10",
     "@types/hapi__vision": "^5.5.7",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.29.1",
     "nodemon": "^3.0.3",
     "prettier": "^3.2.4",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
@@ -36,10 +37,12 @@
     "@hapi/vision": "^7.0.3",
     "dotenv": "^16.4.1",
     "handlebars": "^4.7.8",
+    "hapi-auth-jwt2": "^10.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mais-mongoose-seeder": "^1.0.7",
     "mongoose": "^7.6.8"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   }
 }
